js/js.translator/testData/incremental/invalidationWithPL/interfaceBecomeClass/lib1/l1.2.kt
interface Foo {
    fun getSomething() = 2
}
